k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    app.kubernetes.io/part-of: todo-app
    pod-security.kubernetes.io/enforce: privileged
